[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "smahub"
version = "1.1.2"
authors = [
    {name = "Daniel Krippner", email = "dk.mailbox@gmx.net"},
]
description = "Little daemon that runs plugins for collecting data from SMA PV products, and publishes to eg MQTT via other plugins."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "requests ~=2.31.0",
    "urllib3 ~=2.0.3",
    "paho-mqtt ~=1.6.1",
    "ha_mqtt_discoverable ~=0.9",
    "debugpy ~=1.6",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]