[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "smahub"
version = "1.7.1"
authors = [{ name = "Daniel Krippner", email = "dk.mailbox@gmx.net" }]
description = "Little daemon that runs plugins for collecting data from SMA PV products, and publishes to eg MQTT via other plugins."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "debugpy ~=1.8",
    "ha_mqtt_discoverable ~=0.16",
    "paho-mqtt ~=1.6.1",
    "requests ~=2.32",
    "urllib3 ~=2.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
